Bug 69893 - EDITING: Ctrl+A select only the table if there is an empty table with a first cell empty at the document beginning
Summary: EDITING: Ctrl+A select only the table if there is an empty table with a first...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: All Linux (All)
: low minor
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.2.0
Keywords:
: 69894 69939 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-09-27 22:28 UTC by Arnaud Versini
Modified: 2013-10-28 11:15 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Reproducer document (7.01 KB, application/vnd.oasis.opendocument.text)
2013-10-28 09:25 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arnaud Versini 2013-09-27 22:28:49 UTC
Steps to reproduce:
-Create at the begining a table,
-Don't put anything in the table
-Create paragraphs below the table
-In the pragraphs, try Ctrl + A

Expected behavior :
-All document selected

Results :
-Only  the table is selected

Next part of the bug :
-Add content to the table
-In the paragprahs below, type Ctrl + A

Expected behavior :
-All document selected

Results :
-Only the first case is selected
Comment 1 Joel Madero 2013-09-27 22:38:51 UTC
Ubuntu 13.04
LibreOffice 4.1.1.2

New (confirmed)
Minor - doesn't prevent high quality work, just slows it down
Low - default seems appropriate
Comment 2 Michael Meeks 2013-09-27 23:01:46 UTC
*** Bug 69894 has been marked as a duplicate of this bug. ***
Comment 3 Arnaud Versini 2013-09-29 18:55:06 UTC
Error in my first description, on the master, doesn't work only if the first cell is empty.
Comment 4 Jean-Baptiste Faure 2013-09-29 19:24:55 UTC
There is some confusion here. This bug report comes from https://bugs.freedesktop.org/show_bug.cgi?id=37606#c33 in bug 37606. This bug is fixed in master but not yet in 4.1 branch (review in progress). So at this moment the 2nd part of the description is a duplicate of bug 37606 in the case of LO 4.1.

With the current master, if the table has its first cell not empty, ctrl+A works as expected and select the whole document. If the table is empty then ctrl+A select the table only and move the cursor in the last cell. Between these two extreme cases, I am not able to see a regular behavior. It depends on the place where is the cursor when you press ctrl+A: inside the table or outside, in an empty cell or in a non empty cell.

So, I changed the summary and the version number accordingly.

Best regards. JBF
Comment 5 Arnaud Versini 2013-09-29 19:51:33 UTC
New steps to reproduce :

-Create at the begining a table,
-Fill text in the table, except in the first case of the first line
-Create paragraphs below the table
-In the pragraphs, try Ctrl + A

Expected behavior :
-All document selected

Results :
-Only  the table is selected
Comment 6 rpr 2013-09-29 22:03:05 UTC
Arnaud, if I understood your English correctly the steps are as follows:

- Create a table at the beginning of a document
- Fill some text in the table, except in the first cell of the first row
- Create paragraphs below the table
- In the paragraphs press Ctrl + A

Expected behavior:
- The whole document is selected

Results :
- Only the table is selected
Comment 7 Arnaud Versini 2013-09-29 22:06:45 UTC
yes ! Sorry for my bad english !
Comment 8 Jean-Baptiste Faure 2013-10-03 21:13:30 UTC
*** Bug 69939 has been marked as a duplicate of this bug. ***
Comment 9 Miklos Vajna 2013-10-28 09:25:07 UTC
Created attachment 88219 [details]
Reproducer document
Comment 10 Commit Notification 2013-10-28 11:12:13 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d1eb536c7e410d40fd94c76b157bbd4ed7944d4c

fdo#69893 fix SwWrtShell::SelAll() to work with empty table at doc start



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Miklos Vajna 2013-10-28 11:15:45 UTC
Fixed in master, bug was master-only, so no backport.