bnc#825891 fdo#69893 fix SwWrtShell::SelAll() to work with empty table at doc start

In theory, it was a problem to have the table cursor around when having
the selection outside the table; but it didn't cause a problem so far.
However, when the table has one or more empty cells, we really need to
leave table mode, otherwise only the table gets selected.

Change-Id: I766903ed624b9338f0612697b4c03f44de1d2e41
(cherry picked from commit d1eb536c7e410d40fd94c76b157bbd4ed7944d4c)

Conflicts:
	sw/qa/extras/uiwriter/uiwriter.cxx